Diet Activity Added

--- a/app/src/main/res/layout/activity_add_details.xml
+++ b/app/src/main/res/layout/activity_add_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#99d0c8"
-    tools:context=".AdminActivity">
+    tools:context=".AddDetailsActivity">
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -23,30 +23,31 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-        <Button
-            android:id="@+id/bt_admin_add"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="ADD"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add Details"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/bt_admin_retrieve"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="RETRIEVE"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent" />
-
+    <EditText
+        android:id="@+id/et_login_username"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/et_user_pwd"
+        android:ems="10"
+        android:hint="Full Name"
+        android:inputType="textPersonName"
+        android:padding="10dp"
+        android:textColor="#9a9a9a"
+        android:textColorHint="#9a9a9a"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
