--- a/app/src/main/res/layout/activity_diet.xml
+++ b/app/src/main/res/layout/activity_diet.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#99d0c8"
-    tools:context=".AdminActivity">
+    tools:context=".DietActivity">
+
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -23,30 +24,32 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-        <Button
-            android:id="@+id/bt_admin_add"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="ADD"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DIET"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="35dp"
+        android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/bt_admin_retrieve"
-            android:layout_width="250dp"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="RETRIEVE"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_marginTop="20dp"
+            android:text="Select Day"
+            android:textAlignment="center"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_marginTop="10dp"
+            android:layout_width="132dp"
+            android:layout_height="37dp"
+            android:layout_gravity="center" />
     </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
