--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,15 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#99d0c8"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:text="Search Patient"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:textAlignment="center"
+            android:textSize="30dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:text="Search Patient by Name"
+            android:textStyle="bold"
+            android:textColor="#0c0c0c"
+            android:textAlignment="center"
+            android:textSize="20dp"/>
+
+        <EditText
+            android:id="@+id/et_home_PName"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="50sp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginRight="100dp"
+            android:background="@drawable/et_user_pwd"
+            android:ems="10"
+            android:hint=" Enter patient name "
+            android:inputType="textPersonName"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:text="Enter Joined date"
+            android:textStyle="bold"
+            android:textColor="#0c0c0c"
+            android:textAlignment="center"
+            android:textSize="20dp"/>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
+
+            <EditText
+                android:id="@+id/et_home_date"
+                android:layout_width="10dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/et_user_pwd"
+                android:gravity="center"
+                android:hint=" date "
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/et_home_month"
+                android:layout_width="10dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/et_user_pwd"
+                android:gravity="center"
+                android:hint=" month "
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/et_home_year"
+                android:layout_width="10dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/et_user_pwd"
+                android:gravity="center"
+                android:hint=" year "
+                android:inputType="textPersonName"
+                />
+        </LinearLayout>
+
+    <Button
+        android:id="@+id/bt_home_plan"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="303dp"
-        android:text="welcome to login "
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="30dp"
+        android:text="Search"
+        android:textColor="#fff"
+        android:background="@drawable/sign_in_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
