--- a/app/src/main/res/layout/activity_update_diet.xml
+++ b/app/src/main/res/layout/activity_update_diet.xml
@@ -32,62 +32,110 @@
         android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_UD_givopt"
+            android:id="@+id/tv_update_diet_line"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Give Options "
+            android:text="Diet Plan"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="25dp"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/et_UD_1pref"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/et_user_pwd"
-            android:ems="10"
-            android:hint="1st Preference"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:textColor="#9a9a9a"
-            android:textColorHint="#9a9a9a"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
 
-        <EditText
-            android:id="@+id/et_UD_2pref"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/et_user_pwd"
-            android:ems="10"
-            android:hint="2nd Preference"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:textColor="#9a9a9a"
-            android:textColorHint="#9a9a9a"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tv_UD_BF"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="50dp"
+                android:text="Breakfast :"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:textSize="20dp" />
 
-        <EditText
-            android:id="@+id/et_UD_3pref"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/et_user_pwd"
-            android:ems="10"
-            android:hint="3nd Preference"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:textColor="#9a9a9a"
-            android:textColorHint="#9a9a9a"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <EditText
+                android:id="@+id/et_UD_BF"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="#fff" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/tv_UD_LUN"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="50dp"
+                android:text="Lunch :"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/et_UD_LUN"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="#fff" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/tv_UD_SNK"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="50dp"
+                android:text="Snacks :"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/et_UD_SNK"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="#fff" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/tv_UD_DIN"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="50dp"
+                android:text="Dinner :"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/et_UD_DIN"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="#fff" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/bt_UD_update"
