--- a/app/src/main/res/layout/activity_diet.xml
+++ b/app/src/main/res/layout/activity_diet.xml
@@ -24,14 +24,27 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="DIET"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="35dp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:padding="20dp">
+
+
+            <ImageView
+                android:id="@+id/iv_diet_back"
+                android:layout_width="55dp"
+                android:layout_height="67dp"
+                app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DIET"
+                android:textAlignment="center"
+                android:textColor="#ffffff"
+                android:textSize="35dp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
