--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,22 @@
                 android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/et_login_ename"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/et_user_pwd"
+                android:ems="10"
+                android:hint="name"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColor="#9a9a9a"
+                android:textColorHint="#9a9a9a"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
                 android:id="@+id/et_login_username"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
