--- a/app/src/main/res/layout/activity_update_diet.xml
+++ b/app/src/main/res/layout/activity_update_diet.xml
@@ -20,16 +20,29 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="20dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
+
+
+        <ImageView
+            android:id="@+id/iv_UD_back"
+            android:layout_width="55dp"
+            android:layout_height="67dp"
+            android:background="#bce0db"
+            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
     <TextView
         android:id="@+id/tv_update_diet_key"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="67dp"
         android:text=" "
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="35dp"
         android:textStyle="bold" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_update_diet_line"
