--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -53,14 +53,14 @@
 
                 <TextView
                     android:id="@+id/tv_PD_name"
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginStart="50dp"
                     android:text="Name :"
                     android:textColor="#fff"
                     android:textStyle="bold"
-                    android:textSize="20dp" />
+                    android:textSize="22dp" />
 
                 <TextView
                     android:id="@+id/tv_PD_patient_name"
@@ -69,7 +69,7 @@
                     android:layout_marginTop="20dp"
                     android:text=" "
                     android:textColor="#fff"
-                    android:textStyle="bold"
+                    android:textStyle="italic"
                     android:textSize="20dp" />
             </LinearLayout>
 
@@ -80,13 +80,13 @@
 
                 <TextView
                     android:id="@+id/tv_PD_Phnnum"
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="50dp"
                     android:text="Phone no.:"
                     android:textColor="#fff"
                     android:textStyle="bold"
-                    android:textSize="20dp" />
+                    android:textSize="22dp" />
 
                 <TextView
                     android:id="@+id/tv_PD_patient_phnnum"
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:text=" "
                     android:textColor="#fff"
-                    android:textStyle="bold"
+                    android:textStyle="italic"
                     android:textSize="20dp" />
             </LinearLayout>
 
@@ -105,13 +105,13 @@
 
                 <TextView
                     android:id="@+id/tv_PD_result"
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="50dp"
                     android:text="Result :"
                     android:textColor="#fff"
                     android:textStyle="bold"
-                    android:textSize="20dp" />
+                    android:textSize="22dp" />
 
                 <TextView
                     android:id="@+id/tv_PD_patient_result"
@@ -119,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:text=" "
                     android:textColor="#fff"
-                    android:textStyle="bold"
+                    android:textStyle="italic"
                     android:textSize="20dp" />
             </LinearLayout>
 
