--- a/app/src/main/res/layout/activity_admin_choose.xml
+++ b/app/src/main/res/layout/activity_admin_choose.xml
@@ -23,6 +23,44 @@
             android:orientation="vertical"
             android:padding="20dp">
 
+            <TextView
+                android:id="@+id/tv_AC_username"
+                android:layout_width="280dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="50dp"
+                android:padding="5dp"
+                android:text=" "
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_AC_mail"
+                android:layout_width="280dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="50dp"
+                android:padding="5dp"
+                android:text=" "
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_AC_phnnum"
+                android:layout_width="280dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="50dp"
+                android:text=" "
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_AC_joinAt"
+                android:layout_width="280dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="50dp"
+                android:text=" "
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <Button
                 android:id="@+id/bt_admchs_edtdet"
                 android:layout_width="250dp"
